# scylla-rust-driver

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  Cql_to_Value.sh  LICENSE-MIT  MAINTENANCE.md  Makefile  README.md  RELEASE.md  clippy.toml  llms.txt  renovate.json  sitemap.xml
benchmark/: Cargo.toml
benchmark/src/: main.rs
benchmarks/: Cargo.toml  README.md  config.yml  run-rust-benchmark.sh
benchmarks/benches/: requests.rs
benchmarks/src/: batch.rs  common.rs  concurrent_deser.rs  concurrent_insert.rs  concurrent_paging.rs  concurrent_select.rs  concurrent_ser.rs  deser.rs  insert.rs  large_select.rs  lib.rs  paging.rs  parametrized_select.rs  select.rs  ser.rs
docs/: Makefile  book.toml  build_book.py  pyproject.toml  sphinx_preprocessor.py
docs/_build/dirhtml/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
docs/_build/doctrees/: SUMMARY.doctree  contents.doctree  environment.pickle  index.doctree  title-page.doctree
docs/_utils/: deploy.sh  drop_hashes.py  multiversion.sh  prepare_sphinx_source.py  pyproject_template.toml  setup.sh
docs/source/: SUMMARY.md  book.yaml  conf.py  connecting  contents.rst  data-types  index.md  index.rst  load-balancing  logging  metrics  queries  quickstart  retry-policy  title-page.md  tracing
docs/source/connecting/: authentication.md  client-routes.md  compression.md  connecting.md  tls.md
docs/source/data-types/: blob.md  collections.md  counter.md  data-types.md  date.md  decimal.md  duration.md  inet.md  primitive.md  text.md  time.md  timestamp.md  timeuuid.md  tuple.md  udt.md  uuid.md  varint.md  vector.md
docs/source/execution-profiles/: create-and-use.md  execution-profiles.md  maximal-example.md  priority.md  remap.md
docs/source/load-balancing/: dc-robin.md  default-policy.md  load-balancing.md  robin.md  token-dc-robin.md  token-robin.md
docs/source/logging/: logging.md
docs/source/metrics/: metrics.md
docs/source/migration-guides/: 0.11-serialization.md  0.15-deserialization.md  migration-guides.md  post-0.8-deserialization.md
docs/source/queries/: batch.md  client_timeout.md  displaying-results.md  lwt.md  paged.md  prepared.md  queries.md  result.md  schema-agreement.md  schema_agreement.md  simple.md  timeouts.md  timestamp-generators.md  usekeyspace.md  values.md
docs/source/quickstart/: create-project.md  example.md  index.rst  quickstart.md  scylla-docker.md
docs/source/retry-policy/: default.md  downgrading-consistency.md  downgrading_consistency.md  fallthrough.md  retry-policy.md
docs/source/schema/: schema.md
docs/source/speculative-execution/: percentile.md  simple.md  speculative.md
docs/source/statements/: batch.md  displaying-results.md  lwt.md  paged.md  prepared.md  result.md  schema-agreement.md  statements.md  timeouts.md  timestamp-generators.md  unprepared.md  usekeyspace.md  values.md
docs/source/tracing/: basic.md  batch.md  paged.md  prepare.md  query-history.md  simple-prepared.md  tracing.md
docs/sphinx/: Makefile  conf.py  prepare_sphinx_source.py  pyproject.toml
examples/: Cargo.toml  allocations.rs  auth.rs  basic.rs  client-routes.rs  clone.rs  cloud-openssl.rs  cloud-rustls.rs  cloud.rs  compare-tokens.rs  config_data.yaml  cql-time-types.rs  cql_collections.rs  cqlsh-rs.rs  custom_deserialization.rs  custom_load_balancing_policy.rs  displayer.rs  enforce_coordinator.rs  example.rs  execution_profile.rs  get_by_name.rs  logging.rs  logging_log.rs  otel_tracing.rs  parallel-prepared.rs  parallel.rs  private-link.rs  query_history.rs  rustls.rs  schema_agreement.rs  select-paging.rs  speculative-execution.rs  tls-openssl.rs  tls-rustls.rs  tls.rs  tower.rs  tracing.rs  user-defined-type.rs  value_list.rs
examples/certs/: scylla.crt
scylla/: Cargo.toml
scylla-cql/: Cargo.toml
scylla-cql-core/: Cargo.toml
scylla-cql-core/src/: _macro_internal.rs  lib.rs  macros_doctests.rs  macros_tests.rs  value.rs
scylla-cql-core/src/deserialize/: README.md  frame_slice.rs  mod.rs  result.rs  row.rs  row_tests.rs  value.rs  value_tests.rs
scylla-cql-core/src/frame/: frame_errors.rs  mod.rs  protocol_features.rs  types.rs
scylla-cql-core/src/serialize/: batch.rs  mod.rs  row.rs  value.rs  writers.rs
scylla-cql-core/src/utils/: mod.rs  parse.rs
scylla-cql/benches/: benchmark.rs  vector_bench.rs
scylla-cql/src/: _macro_internal.rs  errors.rs  lib.rs  macros.rs  macros_doctests.rs  macros_tests.rs  map_like.rs  pretty.rs  string_keyed_map_like.rs  types_tests.rs  value.rs
scylla-cql/src/deserialize/: README.md  frame_slice.rs  mod.rs  result.rs  row.rs  row_tests.rs  value.rs  value_tests.rs
scylla-cql/src/frame/: frame_errors.rs  mod.rs  protocol_features.rs  server_event_type.rs  types.rs  value.rs  value_tests.rs
scylla-cql/src/serialize/: batch.rs  batch_tests.rs  mod.rs  raw_batch.rs  row.rs  row_tests.rs  value.rs  value_tests.rs  writers.rs
scylla-cql/src/types/: mod.rs  types_tests.rs
scylla-cql/src/utils/: mod.rs  parse.rs  safe_format.rs
scylla-macros/: Cargo.toml
scylla-macros/src/: enum_attrs.rs  from_row.rs  from_user_type.rs  into_user_type.rs  lib.rs  parser.rs  value_list.rs
scylla-macros/src/deserialize/: cql.rs  mod.rs  row.rs  value.rs
scylla-macros/src/serialize/: cql.rs  mod.rs  row.rs  value.rs
scylla-proxy/: Cargo.toml
scylla-proxy/examples/: cmdline.rs  identity_proxy.rs  identity_shard_aware_proxy.rs  response_delayer.rs
scylla-proxy/src/: actions.rs  errors.rs  frame.rs  lib.rs  nlb.rs  proxy.rs
scylla/benches/: benchmark.rs
scylla/src/: book_tests.rs  errors.rs  history.rs  lib.rs  macros.rs  query.rs  routing.rs  sharding.rs  tracing.rs  types.rs
scylla/src/authentication/: mod.rs
scylla/src/client/: caching_session.rs  client_routes.rs  execution.rs  execution_profile.rs  mod.rs  pager.rs  session.rs  (+4 more)
scylla/tests/: execution_profiles.rs  hygiene.rs  lwt_optimisation.rs  retries.rs
utils/: Cargo.toml
utils/analyze_errors_size/: Cargo.toml  build.rs
utils/find_stale_test_keyspaces/: Cargo.toml
utils/generate_book_tests/: Cargo.toml
(+3596 files in other folders)
