[workspace]
members = [
    "examples",
    "scylla",
    "scylla-macros",
    "scylla-cql",
    "scylla-proxy",
    "utils",
]
resolver = "3"

[workspace.metadata.cargo-semver-checks.lints]
# We don't consider it a major change, so downgrade from deny
type_method_marked_deprecated = { level = "warn" }
