[tool.poetry]
name = "sphinx-docs"
description = "ScyllaDB Documentation"
version = "1.3"
authors = ["ScyllaDB Documentation Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.18.0"
redirects_cli = "^0.1.3"
sphinx-scylladb-theme = "^1.8.8"
sphinx-sitemap = "^2.6.0"
sphinx-autobuild = "^2024.4.19"
Sphinx = "^7.3.7"
sphinx-multiversion-scylla = "^0.3.1"
sphinx-scylladb-markdown = "^0.1.2"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
