[project]
name = "sphinx-docs"
version = "1.4"
description = "ScyllaDB Documentation"
authors = [{ name = "ScyllaDB Documentation Contributors" }]
requires-python = ">=3.10"
dependencies = [
    "pygments>=2.18.0",
    "redirects_cli>=0.1.3",
    "sphinx-scylladb-theme>=1.8.10",
    "sphinx-sitemap>=2.6.0",
    "sphinx-autobuild>=2024.4.19",
    "sphinx>=7.3.7",
    "sphinx-multiversion-scylla>=0.3.4",
    "sphinx-scylladb-markdown>=0.1.2",
]
