[package]
name = "scylla-cql-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CQL data types and primitives that form the stable public API of the ScyllaDB Rust driver."
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
keywords = ["database", "scylla", "scylladb", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"

[package.metadata."docs.rs"]
all-features = true

[lints.rust]
unnameable_types = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(scylla_unstable)',
] }

[features]
# Enables support for CQL ser/de of Secrecy type from secrecy 0.8 crate.
secrecy-08 = ["dep:secrecy-08"]
# Enables support for CQL ser/de of Secrecy type from secrecy 0.10 crate.
secrecy-10 = ["dep:secrecy-10"]
# Enables support for CQL ser/de of time/date types from time 0.3 crate.
time-03 = ["dep:time-03"]
# Enables support for CQL ser/de of time/date types from chrono 0.4 crate.
chrono-04 = []
# Enables support for CQL ser/de of arbitrary length integer types from num-bigint 0.3 crate.
num-bigint-03 = ["dep:num-bigint-03"]
# Enables support for CQL ser/de of arbitrary length integer types from num-bigint 0.4 crate.
num-bigint-04 = ["dep:num-bigint-04"]
# Enables support for CQL ser/de of arbitrary precision decimal types from bigdecimal 0.4 crate.
bigdecimal-04 = ["dep:bigdecimal-04"]
# Enables serde::Deserialize derives for Consistency and SerialConsistency.
# This was used by unstable-cloud in `scylla` crate before it was removed.
# TODO(2.0): Remove this feature
serde = ["dep:serde"]

[dependencies]
# FrameSlice and other parts of public API (impl SerializeValue for Bytes, BufMut in vint_encode)
bytes = "1.0.1"
# CqlTimeuuid, ser/deser of CQL UUID
uuid = "1.0"
# Easier error type creation (ValueOverflow).
thiserror = "2.0.6"
# Used by safe_format utility (Display for CqlValue).
itertools = "0.14.0"
# Not optional, because it is also used by Display impl of CqlValue.
chrono-04 = { package = "chrono", version = "0.4.32", default-features = false, features = [
    "alloc",
] }
num-bigint-03 = { package = "num-bigint", version = "0.3", optional = true }
num-bigint-04 = { package = "num-bigint", version = "0.4", optional = true }
bigdecimal-04 = { package = "bigdecimal", version = "0.4", optional = true }
time-03 = { package = "time", version = "0.3", optional = true }
secrecy-08 = { package = "secrecy", version = "0.8", optional = true }
secrecy-10 = { package = "secrecy", version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

####################
# Internal utilities
####################

# Easier deserialization of numeric types from byte arrays.
byteorder = "1.3.4"

[dev-dependencies]
assert_matches = "1.5.0"
