[package]
name = "scylla-macros"
version = "0.7.0"
edition = "2021"
rust-version = "1.70"
description = "proc macros for scylla async CQL driver"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
categories = ["database"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lints.rust]
unnameable_types = "warn"
unreachable_pub = "warn"

# When bumping major version of scylla / scylla-cql, those dependencies
# also need to be updated. Fortunately Cargo will yell very loudly if that
# is not done.
# When bumping minor versions of scylla / scylla-cql nothing bad will happen
# if we forget to update versions here.
[dev-dependencies]
scylla = { version = "0.15.0", path = "../scylla"}
scylla-cql = { version = "0.4.0", path = "../scylla-cql"}