[package]
name = "scylla-macros"
version = "1.3.0"
edition = "2021"
rust-version = "1.81"
description = "proc macros for scylla async CQL driver"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
categories = ["database"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[package.metadata."docs.rs"]
all-features = true

[dependencies]
darling = "0.20.10"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lints.rust]
unnameable_types = "warn"
unreachable_pub = "warn"

[dev-dependencies]
scylla = { path = "../scylla" }
scylla-cql = { path = "../scylla-cql" }
