[package]
name = "scylla-proxy"
version = "0.0.3"
edition = "2021"
description = "Proxy layer between Scylla driver and cluster that enables testing Scylla drivers' behaviour in unfavourable conditions"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"

[features]
defaults = []

[dependencies]
scylla-cql = { version = "0.0.10", path = "../scylla-cql" }
byteorder = "1.3.4"
bytes = "1.2.0"
futures = "0.3.6"
num_enum = "0.5"
tokio = { version = "1.12", features = ["net", "time", "io-util", "sync", "rt", "macros", "rt-multi-thread"] }
uuid = "1.0"
thiserror = "1.0.32"
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
chrono = { version = "0.4", default-features = false }
rand = "0.8.5"

[dev-dependencies]
assert_matches = "1.5.0"
ntest = "0.9.0"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tokio = { version = "1.12", features = ["signal"] }

