[package]
name = "scylla-proxy"
version = "0.0.4"
edition = "2021"
rust-version = "1.85"
description = "Proxy layer between Scylla driver and cluster that enables testing Scylla drivers' behaviour in unfavourable conditions"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"

[package.metadata."docs.rs"]
all-features = true

[features]
defaults = []

[dependencies]
scylla-cql = { version = "1.3.1", path = "../scylla-cql" }
byteorder = "1.3.4"
bytes = "1.2.0"
futures = "0.3.6"
tokio = { version = "1.40", features = [
    "net",
    "time",
    "io-util",
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
] }
uuid = "1.0"
thiserror = "2.0.6"
bigdecimal = "0.4"
num-bigint = "0.3"
tracing = "0.1.25"
chrono = { version = "0.4", default-features = false }
rand = "0.9.0"

[dev-dependencies]
assert_matches = "1.5.0"
ntest = "0.9.3"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tokio = { version = "1.34", features = ["signal"] }

[lints.rust]
unreachable_pub = "warn"
