[package]
name = "scylla-proxy"
version = "0.0.6"
edition = "2024"
rust-version = "1.88"
description = "Proxy layer between ScyllaDB driver and cluster that enables testing ScyllaDB drivers' behaviour in unfavourable conditions"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
keywords = ["database", "scylla", "scylladb", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"

[package.metadata."docs.rs"]
all-features = true

[features]
defaults = []

[dependencies]
scylla-cql = { version = "1.7.0", path = "../scylla-cql" }
bytes = "1.10"
futures = "0.3.6"
tokio = { version = "1.40", features = [
    "net",
    "time",
    "io-util",
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
] }
thiserror = "2.0.6"
tracing = "0.1.25"
rand = "0.10.0"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tokio = { version = "1.34", features = ["signal"] }

[lints.rust]
unreachable_pub = "warn"

[package.metadata.cargo-semver-checks.lints]
workspace = true
