[package]
name = "scylla"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
description = "Async CQL driver for Rust, optimized for Scylla, fully compatible with Apache Cassandra™"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "../README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
openssl-010 = ["dep:tokio-openssl", "dep:openssl"]
rustls-023 = ["dep:tokio-rustls", "dep:rustls"]
unstable-cloud = [
    "scylla-cql/serde",
    "dep:serde_yaml",
    "dep:serde",
    "dep:url",
    "dep:base64",
]
secrecy-08 = ["scylla-cql/secrecy-08"]
chrono-04 = ["scylla-cql/chrono-04"]
time-03 = ["scylla-cql/time-03"]
num-bigint-03 = ["scylla-cql/num-bigint-03"]
num-bigint-04 = ["scylla-cql/num-bigint-04"]
bigdecimal-04 = ["scylla-cql/bigdecimal-04"]
full-serialization = [
    "chrono-04",
    "time-03",
    "secrecy-08",
    "num-bigint-03",
    "num-bigint-04",
    "bigdecimal-04",
]
metrics = ["dep:histogram"]
unstable-testing = []

[dependencies]
scylla-cql = { version = "1.1.0", path = "../scylla-cql" }
byteorder = "1.3.4"
bytes = "1.0.1"
futures = "0.3.6"
hashbrown = "0.14"
histogram = { version = "0.11.1", optional = true }
tokio = { version = "1.34", features = [
    "net",
    "time",
    "io-util",
    "sync",
    "rt",
    "macros",
] }
snap = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9.0"
thiserror = "2.0.6"
itertools = "0.14.0"
tracing = "0.1.36"
chrono = { version = "0.4.32", default-features = false, features = ["clock"] }
openssl = { version = "0.10.70", optional = true }
tokio-openssl = { version = "0.6.1", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
arc-swap = "1.3.0"
dashmap = "5.2"
lz4_flex = { version = "0.11.1" }
smallvec = "1.8.0"
async-trait = "0.1.56"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.14", optional = true }
url = { version = "2.3.1", optional = true }
base64 = { version = "0.22.1", optional = true }
rand_pcg = "0.9.0"
socket2 = { version = "0.5.3", features = ["all"] }
lazy_static = "1"

[dev-dependencies]
num-bigint-03 = { package = "num-bigint", version = "0.3" }
num-bigint-04 = { package = "num-bigint", version = "0.4" }
bigdecimal-04 = { package = "bigdecimal", version = "0.4" }
scylla-proxy = { version = "0.0.3", path = "../scylla-proxy" }
ntest = "0.9.3"
criterion = "0.4"                                                      # Note: v0.5 needs at least rust 1.70.0
tokio = { version = "1.34", features = ["test-util"] }
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
assert_matches = "1.5.0"
rand_chacha = "0.9.0"
time = "0.3"

[[bench]]
name = "benchmark"
harness = false
required-features = ["unstable-testing"]

[lints.rust]
unnameable_types = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(scylla_cloud_tests)',
    'cfg(cassandra_tests)',
    'cfg(cpp_rust_unstable)',
] }
